--- a/client_new/css/chart.css
+++ b/client_new/css/chart.css
@@ -33,12 +33,21 @@
 
 #chart-inner-container .max-profit {
     position: absolute;
-    /* bottom: 0; */
     top: 0;
-    /* right: 10%; */
     left: 10%;
     font-size: 0.5rem;
     color: rgb(76, 75, 75);
+}
+
+#chart-inner-container .connection-state {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 2rem;
+    background-color: rgb(232, 128, 128);
+    line-height: 3rem;
 }
 
 #chart-inner-container canvas.hide {
