--- a/views/index.html
+++ b/views/index.html
@@ -71,6 +71,12 @@
             </div>
         </div>
 
+        <div class="grid">
+            <div class="col-1-1">
+                <h5 class="licence">Bustabit.com is fully owned and operated by MoneyPot S.L.R. a Costa Rican gaming company (License No. 3-102-700828)</h5>
+            </div>
+        </div>
+
     </div>
 #}}
 {{#def.include('./template/main_new')}}
