--- a/client_new/css/blackTheme.css
+++ b/client_new/css/blackTheme.css
@@ -128,6 +128,10 @@ body {
     background-image: url('../img/loading-black.gif');
 }
 
+#chat-channel-selector .flags-container {
+    background-color: #181a1e;
+}
+
 
 /* ==========================================================================
    tabsSelector.css
