--- a/views/account.html
+++ b/views/account.html
@@ -4,6 +4,7 @@
     function logout() {
         if (document.getElementById('logout') ) {
             if (confirm("Are you sure you want to log out?")) {
+                localStorage.clear();
                 document.getElementById("logout").submit();
             }
         }
