Add verify script to FAQ closes #253

--- a/views/faq.html
+++ b/views/faq.html
@@ -23,6 +23,7 @@
                 <li><a href="#odds">What are the game odds?</a></li>
                 <li><a href="#crash-point">How is the game bust calculated?</a></li>
                 <li><a href="#fair">Is the game fair?</a></li>
+                <li><a href="#verify">How to verify the game results?</a></li>
                 <li><a href="#force">What happens when the server forces people to cash out?</a></li>
                 <li><a href="#other">What other gambling places do you recommend?</a></li>
                 <li><a href="#addiction">Gambling Addiction</a></li>
@@ -240,6 +241,13 @@
                     Absolutely! And we can prove it. Please see:
                     <a href="https://bitcointalk.org/index.php?topic=922898.0">the bitcoin talk thread</a>
                     for technical details.
+                </p>
+            </dd>
+            <dd>
+                <b><a name="verify"></a>How to verify the game results?</b>
+                <p>
+                    There are already 3rd party scripts to verify the game hashes and to calculate the results like this
+                    <a href="https://jsfiddle.net/1L1uqcgv/6/embedded/result/">JSFiddle</a>.
                 </p>
             </dd>
             <dd>
